--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "express": "^4.17.1",
     "google-trends-api": "^4.9.0",
     "helmet": "^3.23.3",
+    "https": "^1.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
-    "undici": "^5.0.0",
-    "uspto": "^2.0.1"
+    "ssl-root-cas": "^1.3.1",
+    "undici": "^5.0.0"
   }
 }
