--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
     "ssl-root-cas": "^1.3.1",
-    "undici": "^5.0.0"
+    "undici": "^5.0.0",
+    "uspto": "^2.0.1"
   }
 }
