--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "@alexpaper",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
+    "@mui/styled-engine-sc": "^5.7.0",
     "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -22,10 +26,10 @@
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
     "ssl-root-cas": "^1.3.1",
+    "styled-components": "^5.3.5",
     "undici": "^5.0.0",
     "uspto": "^2.0.1"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mayurkukde84/google-trend.git"
